order-service/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-challenge-order-api
  namespace: tech-challenge-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tech-challenge-order-api
  template:
    metadata:
      labels:
        app: tech-challenge-order-api
    spec:
      containers:
        - name: tech-challenge-order-api
          image: ghcr.io/fiap-soat-g20/tc4-order-service-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi" # 128 mebibytes = 134,217,728 bytes = 128 * 1024 * 1024 bytes
              cpu: "100m" # 100 millicores = 0.1 cores, it means 10% of a core
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe: # verify that the container is ready to accept traffic
            httpGet:
              path: /api/v1/health/readyz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          livenessProbe: # verify that the container is running, and restart it if it's not
            httpGet:
              path: /api/v1/health/livez
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
